tests/snapshots/snapshots__no_step_size_breakdown.snap
---
source: tests/snapshots.rs
assertion_line: 214
expression: breakdown
---
{
  "dimensions": [
    {
      "dimension": "TIME",
      "measured": 0.2,
      "billed": 0.2,
      "cost": 0.48,
      "vat": 0.096,
      "segments": [
        {
          "start": "2024-01-15T19:40:00Z",
          "quantity": 0.2,
          "price": 2.4,
          "vat_percentage": 20,
          "cost": 0.48,
          "tax": 0.096,
          "tax_basis": "excluded",
          "applied": {
            "tariff_id": "14",
            "element_index": 0,
            "component_index": 0,
            "reservation": false,
            "because": "at 2024-01-15 19:40 local (MONDAY), 0 kWh and 0s into the session"
          }
        }
      ]
    },
    {
      "dimension": "PARKING_TIME",
      "measured": 0.133333,
      "billed": 0.133333,
      "cost": 0.1333,
      "vat": 0.0267,
      "segments": [
        {
          "start": "2024-01-15T19:52:00Z",
          "quantity": 0.133333,
          "price": 1,
          "vat_percentage": 20,
          "cost": 0.1333,
          "tax": 0.0267,
          "tax_basis": "excluded",
          "applied": {
            "tariff_id": "14",
            "element_index": 1,
            "component_index": 0,
            "reservation": false,
            "because": "at 2024-01-15 19:52 local (MONDAY), 0 kWh and 720s into the session"
          }
        }
      ]
    }
  ],
  "total_excl_vat": 0.61,
  "total_incl_vat": 0.74,
  "taxes": [
    {
      "percentage": 20,
      "taxable": 0.61,
      "amount": 0.13
    }
  ],
  "tax_basis": "excluded"
}
