tests/snapshots/snapshots__pagination_headers_last_page.snap
---
source: tests/snapshots.rs
expression: "rendered.join(\"\\n\")"
---
x-limit: 50
x-total-count: 3
